--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@langchain/langgraph": "^0.2.45",
     "@langchain/openai": "^0.4.2",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "technicalindicators": "^3.1.0",
     "viem": "^2.22.23",
