--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-CDP_API_KEY_NAME=your-cdp-key-name
-CDP_API_KEY_PRIVATE_KEY=your-cdp-private-key
-OPENAI_API_KEY=your-openai-key
-NETWORK_ID=base-sepolia
+CDP_API_KEY_NAME=
+CDP_API_KEY_PRIVATE_KEY=
+OPENROUTER_API_KEY=
+OPENROUTER_BASE_URL=
+NETWORK_ID=
+MARKET_DATA_API_KEY=
+AGENT_PRIVATE_KEY=
