add postgres tool for user analytics

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ CDP_API_KEY_PRIVATE_KEY=
 OPENROUTER_API_KEY=
 OPENROUTER_BASE_URL=
 NETWORK_ID=
-MARKET_DATA_API_KEY=
+BINANNCE_MARKET_DATA_API_KEY=
 AGENT_PRIVATE_KEY=
